--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -8,6 +8,10 @@
 		"default_popup": "./dist/index.html"
 	},
 
+	"permissions": [
+		"activeTab"
+	],
+
 	"web_accessible_resources": [
 		{
 		  "resources": [ "img/*" ],
@@ -18,7 +22,12 @@
 	"content_scripts": [
 		{
 			"matches": ["https://gakunin-idp.ynu.ac.jp/*"],
-			"js": ["content_scripts_test.js"]
+			"js": ["content_scripts_authCode.js"]
 		}
-	]
+	],
+
+	"background": {
+		"service_worker": "backgrounds_background.js",
+		"type": "module"
+	}
 }
