--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.268",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
